[gd_scene load_steps=8 format=3 uid="uid://dg2idlh7ls536"]

[ext_resource type="Texture2D" uid="uid://s5r3kijshyab" path="res://Asset/Image/Song_Background/Eternal_City/main_menu.png" id="1_ei3ww"]
[ext_resource type="Script" uid="uid://tlfa38sh14xv" path="res://Script/UI/a_song_container.gd" id="1_j2d3r"]
[ext_resource type="Texture2D" uid="uid://dgdy4spw1ah14" path="res://Asset/Image/diamon_shape-removebg-preview.png" id="2_j2d3r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7d4f"]
bg_color = Color(0.388235, 0.34902, 0.482353, 1)

[sub_resource type="Theme" id="Theme_7bwo7"]
Panel/styles/panel = SubResource("StyleBoxFlat_q7d4f")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys6p4"]
bg_color = Color(0.270588, 0.262745, 0.4, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihwt8"]
bg_color = Color(0.243137, 0.290196, 0.384314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.839216, 0.745098, 0.454902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="aSongContainer" type="Button"]
custom_minimum_size = Vector2(0, 80)
offset_right = 8.0
offset_bottom = 80.0
theme = SubResource("Theme_7bwo7")
script = ExtResource("1_j2d3r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ys6p4")

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/CenterContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.388235, 0.921569, 0.917647, 1)
theme_override_font_sizes/font_size = 30
text = "25"
horizontal_alignment = 1

[node name="SongInfoContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="SongImage" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
texture = ExtResource("1_ei3ww")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/SongInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SongNameLabel" type="Label" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Main Theme"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SongStarContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer/SongStarContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_j2d3r")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer/SongStarContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_j2d3r")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer/SongStarContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_j2d3r")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer/SongStarContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_j2d3r")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/HBoxContainer/SongInfoContainer/VBoxContainer/SongStarContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("2_j2d3r")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_ihwt8")

[node name="SongVisualLabel" type="Label" parent="MarginContainer/HBoxContainer/Label"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.631373, 0.517647, 0.286275, 1)
text = "MV"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
